SERVER-3766 Adjust maxDiskLoc to prevent assertion when creating a reverse direction BtreeCursor.  Adjust minDiskLoc for consistency.